added kafka topic for update service definition

--- a/deploy-as-code/helm/charts/health-services/service-request/values.yaml
+++ b/deploy-as-code/helm/charts/health-services/service-request/values.yaml
@@ -44,6 +44,8 @@ env: |
     value: save-service-definition-health
   - name: EGOV_SERVICE_CREATE_TOPIC
     value: save-service-health
+  - name: EGOV_SERVICE_DEFINITION_UPDATE_TOPIC
+    value: update-service-definition-health
   - name: EGOV_SERVICE_REQUEST_DEFAULT_OFFSET
     value: "0"
   - name: EGOV_SERVICE_REQUEST_DEFAULT_LIMIT
